Portal, DeviceDB and Gateway now starting with new configuration